  * utility: Reworked nvmet exports, unexports and port scanning logic (thank
    you Matteo Tenca).
  * scripts: Added example BCC tools script.
  * documentation: Added RPM building documentation.

  [Matteo Tenca]
  * New upstream release.
  * Changed Build-Depends to adapt to the new dependency relations between 'dkms' and 'dh_dkms'
    starting with Ubuntu 22.10 Kinetic.

 -- Matteo Tenca <matteo.tenca@gmail.com>  Mon, 28 Apr 2023 00:00:00 +0000

rapiddisk (9.0.0-1) UNRELEASED; urgency=medium

  [Petros Koutoupis]
  * module: Added code to capture page count metrics.
  * module: Updated ioctl support.
  * module: Fixed page alloc usage decrement on discard.
  * module: Added shrink volume support.
  * module: Added support for 5.19 Linux kernels (thank you Andrea Righi).
  * module: Added support for 6.0 Linux kernels.
  * utility: Added code to lock/unlock RAM device.
  * utility: Added flag to suppress header in stdout (thank you Matteo Tenca).
  * utility: Added support for RapidDisk "model" branding and support for revalidate size in NVMe Target logic.
  * utility: Traced, found and fixed all discovered memory leaks (a huge undertaking, thank you Matteo Tenca!!!).
  * utility: Rewrite daemon to execute commands from a shared library instead of popen to utility (another huge undertaking, thank you Matteo Tenca!!!).
  * utility: Added checks in URL parsing logic for REST API (thank you Matteo Tenca).
  * utility: Fix forking logic in daemon and remove need for realpath() usage (thank you Matteo Tenca).
  * utility: Define and standardize error messaging for consistency and improve verbose mode (thank you Matteo Tenca).
  * utility: Fix resize operation error messaging (github issue #142).
  * utility: Cleaned up and optimized NVMe Target management.
  * scripts: Fixed error checking in NVMe Target hostnqn script file.
  * scripts: Added fio execution script file examples.