@@ -1,10 +1,9 @@
-PACKAGE_NAME="rapiddisk"
+PACKAGE_NAME="rapiddisk-dkms"
 PACKAGE_VERSION="#MODULE_VERSION#"
 MAKE[0]="make -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
 CLEAN="make -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build clean"
 BUILT_MODULE_NAME[0]="rapiddisk"
 BUILT_MODULE_NAME[1]="rapiddisk-cache"
-DEST_MODULE_LOCATION[0]="/kernel/rapiddisk/"
-DEST_MODULE_LOCATION[1]="/kernel/rapiddisk/"
+DEST_MODULE_LOCATION[0]="/extra/"
+DEST_MODULE_LOCATION[1]="/extra/"
 AUTOINSTALL="yes"
-REMAKE_INITRD="yes"
