@@ -4,19 +4,21 @@
 #export DH_VERBOSE = 1
 
 # see FEATURE AREAS in dpkg-buildflags(1)
-#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 # see ENVIRONMENT in dpkg-buildflags(1)
 # package maintainers to append CFLAGS
-#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
+export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
 # package maintainers to append LDFLAGS
-#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 # see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
-DEB_BUILD_OPTIONS += noautodbgsym
+#DEB_BUILD_OPTIONS += noautodbgsym
+
+PDKMS:=rapiddisk-dkms
 
 JOBS:=$(patsubst parallel=%,-j%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 
@@ -32,21 +34,17 @@ override_dh_clean:
 
 override_dh_auto_install:
 	$(MAKE) -$(MAKEFLAGS) $(JOBS) -C $(CURDIR)/src install DESTDIR=$(CURDIR)/debian/rapiddisk
-	sed -e "s/DEB_VERSION_UPSTREAM/$(DEB_VERSION_UPSTREAM)/g" debian/rapiddisk.install.in > debian/rapiddisk.install
 
 override_dh_install:
 	install -T -g root -o root -m 755 -D $(CURDIR)/debian/rapiddisk-on-boot_kernel_prerm $(CURDIR)/debian/rapiddisk-on-boot/etc/kernel/prerm.d/rapiddisk-on-boot
+	sed -e "s/DEB_VERSION_UPSTREAM/$(DEB_VERSION_UPSTREAM)/g" -e "s/PDKMS/$(PDKMS)/g" debian/rapiddisk-dkms.install.in > debian/rapiddisk-dkms.install
 	dh_install
 
 override_dh_installsystemd:
 	dh_installsystemd --name=rapiddiskd 
 
-override_dh_auto_test:
-
-override_dh_dkms:
+override_dh_dkms-indep:
 	dh_dkms -V $(DEB_VERSION_UPSTREAM)
-
-override_dh_dwz:
 
 %:
 	dh ${@} --with dkms
